--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
-  <title>Football Betting</title>
+  <title>TopBet</title>
 </head>
 
 <body>
